[gd_scene load_steps=4 format=3 uid="uid://bw1gfo3lu10ho"]

[ext_resource type="Script" path="res://scene/ui/slot.gd" id="1_sdxjm"]
[ext_resource type="Script" path="res://script/base_slot.gd" id="2_4riyt"]

[sub_resource type="Resource" id="Resource_dbfhi"]
script = ExtResource("2_4riyt")
count = 1

[node name="SlotPanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sdxjm")
slot = SubResource("Resource_dbfhi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SlotTexture" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="CountLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "99"
